--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="styles.css">
     <title>Les 3 - Opdracht CSS Grid</title>
 </head>
+<main class="grid-container">
+    <div class="grid-item" id="a">A</div>
+    <div class="grid-item" id="b">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor id quae quas sit unde veritatis voluptas? Animi asperiores aut commodi dolores ea eaque fuga fugit harum inventore ipsa itaque laudantium necessitatibus officia pariatur perferendis quae quaerat quas qui quo, quos sit sunt vel voluptatem. Accusantium animi aperiam architecto aut blanditiis consectetur corporis culpa, debitis dicta eum fugiat in ipsa magnam natus necessitatibus nulla officiis porro praesentium provident, quia quibusdam repudiandae tempora ut vel velit vitae voluptatibus? Ad aut consequuntur dignissimos fugiat hic necessitatibus nulla porro, reprehenderit sapiente tenetur vel velit veniam vitae? Aliquid beatae consectetur earum eveniet minima nam optio, quae quaerat quasi quis repellat similique sit vero! Ab animi autem doloremque molestias veritatis? Adipisci architecto excepturi iste minima minus perferendis possimus quas quo saepe voluptatum. Cupiditate iste, saepe. Assumenda culpa delectus dolorem eius excepturi illum, impedit in itaque iure mollitia perferendis qui quidem quis sed similique tempore unde vitae!</div>
+    <div class="grid-item" id="c">C</div>
+    <div class="grid-item" id="d">D</div>
+    <div class="grid-item" id="e">E</div>
+    <div class="grid-item" id="f">F</div>
+</main>
+
 <body>
 
 </body>
